--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "devDependencies": {
-    "jest": "^29.4.3"
+    "@types/jest": "^29.4.0",
+    "@types/node": "^18.14.1",
+    "jest": "^29.4.3",
+    "ts-jest": "^29.0.5",
+    "typescript": "^4.9.5"
   },
   "name": "geekshubs",
   "description": "",
